--- a/Template/default/admin/about.twig
+++ b/Template/default/admin/about.twig
@@ -27,7 +27,7 @@
   
 {% block content %}
   <!-- {{ _self.getTemplateName() }} -->  
-  <div class="container">
+  <div class="container{% if usage != 'framework'%}-fluid{% endif %}">
     {% include '@phpManufaktur/Contact/Template/default/admin/toolbar.twig' %}
     {# use the standard 'about' dialog from BASIC #}
     {% include '@phpManufaktur/Basic/Template/default/pattern/bootstrap/about.twig' %}
