--- a/Template/default/admin/edit.contact.twig
+++ b/Template/default/admin/edit.contact.twig
@@ -18,7 +18,7 @@
 {% block stylesheet %}
   {{ parent() }}
   {% if form.contact_type.vars.value == 'PERSON' %}
-    <link rel="stylesheet" type="text/css" href="//ajax.googleapis.com/ajax/libs/jqueryui/1.10.3/themes/smoothness/jquery-ui.min.css" media="screen, projection" />
+    <link rel="stylesheet" type="text/css" href="{{ LIBRARY_URL }}/jquery/ui/latest/themes/smoothness/jquery-ui.min.css" media="screen, projection" />
   {% endif %}
   {% if fileExists(MANUFAKTUR_PATH ~ '/Contact/Template/' ~ FRAMEWORK_TEMPLATES.0 ~ '/css/admin.min.css') %}
     <link rel="stylesheet" type="text/css" href="{{ MANUFAKTUR_URL ~ '/Contact/Template/' ~ FRAMEWORK_TEMPLATES.0 ~ '/css/admin.min.css' }}" media="screen, projection" />
@@ -30,7 +30,7 @@
 
 {% block content %}
   <!-- {{ _self.getTemplateName() }} -->  
-  <div class="container">
+  <div class="container{% if usage != 'framework'%}-fluid{% endif %}">
     
     {% include '@phpManufaktur/Contact/Template/default/admin/toolbar.twig' with {toolbar: extra.toolbar} %}
     
@@ -43,8 +43,8 @@
 {% block footer_jquery %}
   {{ parent() }}
   {% if form.contact_type.vars.value == 'PERSON' %}
-    <script type="text/javascript" src="{{ LIBRARY_URL }}/jquery/ui/1.10.3/ui/minified/jquery-ui.min.js"></script>
-    <script type="text/javascript" src="{{ LIBRARY_URL }}/jquery/ui/1.10.3/ui/i18n/jquery-ui-i18n.js"></script>
+    <script type="text/javascript" src="{{ LIBRARY_URL }}/jquery/ui/latest/ui/minified/jquery-ui.min.js"></script>
+    <script type="text/javascript" src="{{ LIBRARY_URL }}/jquery/ui/latest/ui/minified/i18n/jquery-ui-i18n.min.js"></script>
   {% endif %}
 {% endblock footer_jquery %}
 {% block footer %}
