--- a/Template/default/admin/import/execute.keepintouch.twig
+++ b/Template/default/admin/import/execute.keepintouch.twig
@@ -14,7 +14,7 @@
 
 {% block content %}
   <!-- {{ _self.getTemplateName() }} -->
-  <div class="container">
+  <div class="container{% if usage != 'framework'%}-fluid{% endif %}">
     <div class="panel panel-primary">
       <div class="panel-heading">{{ 'Import contacts from KeepInTouch (KIT)'|trans }}</div>
       <div class="panel-body">
