--- a/Template/default/admin/list.extra.twig
+++ b/Template/default/admin/list.extra.twig
@@ -27,7 +27,7 @@
 
 {% block content %}
   <!-- {{ _self.getTemplateName() }} -->
-  <div class="container">
+  <div class="container{% if usage != 'framework'%}-fluid{% endif %}">
     {% include '@phpManufaktur/Contact/Template/default/admin/toolbar.twig' with {toolbar: extra.toolbar} only %}
     <div class="height-15"></div>
     <div class="text-right">
