--- a/Template/default/pattern/admin/simple/edit.title.twig
+++ b/Template/default/pattern/admin/simple/edit.title.twig
@@ -91,7 +91,7 @@
   <div class="row">
     <div class="col-lg-3 col-md-3 col-sm-4"<label for="submit">&nbsp;</label></div>
     <div class="col-lg-6 col-md-6 col-sm-8">
-      <input class="btn btn-default" type="submit" value="{{ 'Submit'|trans }}" />&nbsp;
+      <button class="btn btn-default" type="submit">{{ 'Submit'|trans }}</button>&nbsp;
       <a class="btn btn-default" href="{{ FRAMEWORK_URL ~ route.list }}" role="button">{{ 'Cancel'|trans }}</a>
     </div>
   </div>
