--- a/Template/default/pattern/admin/simple/select.contact.twig
+++ b/Template/default/pattern/admin/simple/select.contact.twig
@@ -38,7 +38,7 @@
   <div class="row">
     <div class="col-lg-3 col-md-3 col-sm-4"><label for="submit">&nbsp;</label></div>
     <div class="col-lg-6 col-md-6 col-sm-8">
-      <input class="btn btn-default" type="submit" value="{{ 'Create contact'|trans }}" />
+      <button class="btn btn-default" type="submit">{{ 'Create contact'|trans }}</button>
     </div>
   </div>
 </form>
