extend contact for the field `category_type_access` which enable classifying contacts as `PUBLIC` or `ADMIN`

--- a/Template/default/pattern/admin/simple/edit.contact.twig
+++ b/Template/default/pattern/admin/simple/edit.contact.twig
@@ -55,6 +55,15 @@
     </div>
     
     <div class="row">
+        <div class="col-lg-3 col-md-3 col-sm-4">
+          {{ form_label(form.category_access) }}
+        </div>
+        <div class="col-lg-6 col-md-6 col-sm-8">
+          {{ form_widget(form.category_access, {'attr':{'class':'form-control input-sm'}}) }}
+        </div>
+      </div>
+      
+    <div class="row">
       <div class="col-lg-3 col-md-3 col-sm-4">
         {{ form_label(form.tag) }}
       </div>
