--- a/Template/default/pattern/admin/simple/edit.category.twig
+++ b/Template/default/pattern/admin/simple/edit.category.twig
@@ -39,6 +39,11 @@
       <div class="col-lg-6 col-md-6 col-sm-8">{{ form.vars.value.category_type_name|capitalize }} &rArr; {{ form.vars.value.category_type_name|capitalize|trans }}</div>
     </div>
   {% endif %}
+  
+  <div class="row">
+    <div class="col-lg-3 col-md-3 col-sm-4">{{ form_label(form.category_type_access) }}</div>
+    <div class="col-lg-6 col-md-6 col-sm-8">{{ form_widget(form.category_type_access, {'attr':{'class':'form-control input-sm'}}) }}</div>
+  </div>
 
   <div class="row">
     <div class="col-lg-3 col-md-3 col-sm-4">{{ form_label(form.category_type_description) }}</div>
