--- a/Template/default/pattern/admin/simple/list.category.twig
+++ b/Template/default/pattern/admin/simple/list.category.twig
@@ -15,6 +15,7 @@
       <th>{{ 'ID'|trans }}</th>
       <th>{{ 'Category name'|trans }}</th>
       <th>{{ 'Category name (translated)'|trans }}</th>
+      <th>{{ 'category_type_access'|humanize|trans }}</th>
       <th>{{ 'Category description'|trans }}</th>
       <th>{{ 'Category description (translated)'|trans }}</th>
     </thead>
@@ -24,6 +25,7 @@
           <td class="category_type_id"><a href="{{ FRAMEWORK_URL }}{{ route.edit|replace({'{category_id}':category.category_type_id}) }}">{{ '%03d'|format(category.category_type_id) }}</a></td>
           <td class="category_type_name"><a href="{{ FRAMEWORK_URL }}{{ route.edit|replace({'{category_id}':category.category_type_id}) }}">{{ category.category_type_name }}</a></td>
           <td class="category_type_name translated">{{ category.category_type_name|capitalize }} &rArr; {{ category.category_type_name|capitalize|trans }}</td>
+          <td class="category_type_access">{{ category.category_type_access|trans }}</td>
           <td class="category_type_description">{{ category.category_type_description }}</td>
           <td class="category_type_description translated">{{ category.category_type_description|trans }}</td>            
         </tr>
