introduce ~~ command action[view] ~~

--- a/Template/default/pattern/admin/simple/edit.category.twig
+++ b/Template/default/pattern/admin/simple/edit.category.twig
@@ -46,6 +46,11 @@
   </div>
 
   <div class="row">
+    <div class="col-lg-3 col-md-3 col-sm-4">{{ form_label(form.category_type_target_url) }}</div>
+    <div class="col-lg-6 col-md-6 col-sm-8">{{ form_widget(form.category_type_target_url, {'attr':{'class':'form-control input-sm'}}) }}</div>
+  </div>
+
+  <div class="row">
     <div class="col-lg-3 col-md-3 col-sm-4">{{ form_label(form.category_type_description) }}</div>
     <div class="col-lg-6 col-md-6 col-sm-8">{{ form_widget(form.category_type_description, {'attr':{'class':'form-control input-sm'}}) }}</div>
   </div>
