action[register] in progress

--- a/Template/default/command/list.contact.twig
+++ b/Template/default/command/list.contact.twig
@@ -15,6 +15,7 @@
   <link rel="stylesheet" type="text/css" href="{{ MANUFAKTUR_URL }}/Contact/Template/default/css/command.min.css" />
 {% endblock %}  
 {% block content %}
+  <!-- {{ _self.getTemplateName() }} -->
   {# need the parent to enable prompting messages #}
   {{ parent() }}
   
