--- a/Template/default/command/register.contact.type.twig
+++ b/Template/default/command/register.contact.type.twig
@@ -15,6 +15,7 @@
   <link rel="stylesheet" type="text/css" href="{{ MANUFAKTUR_URL }}/Contact/Template/default/css/command.min.css" />
 {% endblock %}  
 {% block content %}
+  <!-- {{ _self.getTemplateName() }} -->
   {# need the parent to enable prompting messages #}
   <h2>{{ 'Determine contact type'|trans }}</h2>
   
@@ -24,14 +25,14 @@
     <div class="panel-body">
       {% if app.translator.locale == 'de' %}
         {# GERMAN #}
-        <p>Sie sind im Begriff eine Adresse zu übermitteln. Bitte beachten Sie, dass diese Adresse möglicher Weise auf dieser Webseite veröffentlicht wird.</p>
-        <p>Im ersten Schritt müssen Sie festlegen, ob die Adresse an eine <strong>Person</strong> oder <strong>Organisation</strong> gebunden ist. Falls Sie eine Privatperson oder ein Freischaffender sind, wählen Sie <strong>Person</strong>, falls Sie eine Firma, einen Verein oder eine Institution eintragen möchten, wählen Sie <strong>Organisation</strong>.</p>
+        <p>Sie sind im Begriff Kontakt Daten zu übermitteln. Bitte beachten Sie, dass diese Daten möglicher Weise auf dieser Webseite veröffentlicht werden.</p>
+        <p>Im ersten Schritt müssen Sie festlegen, ob die Kontakt Daten an eine <strong>Person</strong> oder <strong>Organisation</strong> gebunden sind. Falls Sie eine Privatperson oder ein Freischaffender sind, wählen Sie <strong>Person</strong>, falls Sie eine Firma, einen Verein oder eine Institution eintragen möchten, wählen Sie <strong>Organisation</strong>.</p>
         <p><em>Der festgelegte Kontakt Typ kann später nicht mehr geändert werden!</em></p>
       {% else %}
         {# ENGLISH #}
-        <p>You are starting to submit an address which will be probably published at this website and can be viewed by everyone.</p>
-        <p>In the first step you must determine if the address is assigned to a <strong>person</strong> or to a <strong>organization</strong>. If you are an individual or a freelancer select <strong>person</strong>, if you represent a company or any business organization select <strong>organization</strong>.</p>
-        <p><em>Be aware that you can not change the contact type at a later time.</em></p>
+        <p>You are starting to submit contact data which will be probably published at this website and can be viewed by everyone.</p>
+        <p>In the first step you must determine if the contact data are assigned to a <strong>person</strong> or to a <strong>organization</strong>. If you are an individual or a freelancer select <strong>person</strong>, if you represent a company or any business organization select <strong>organization</strong>.</p>
+        <p><em>Be aware that you can not change the contact type at a later time!</em></p>
       {% endif %}
     </div>
   </div>
@@ -39,7 +40,7 @@
   {# assign the bootstrap 3 theming for horizontal forms to the Symfony Form Factory output #}  
   {% form_theme form '@phpManufaktur/Contact/Template/default/command/form.fields.horizontal.twig' %}
 
-  <form action="{{ FRAMEWORK_URL ~ '/contact/register' }}" class="form-horizontal" method="post" role="form">
+  <form action="{{ FRAMEWORK_URL ~ '/contact/register?pid=' ~ basic.pid }}" class="form-horizontal" method="post" role="form">
     {# loop through all form fields from the form.json #}
     {{ form_widget(form) }}     
 
