--- a/Template/default/command/register.contact.data.twig
+++ b/Template/default/command/register.contact.data.twig
@@ -12,11 +12,14 @@
 {% block description %}{{ 'Register a public contact record'|trans }}{% endblock %}
 {% block stylesheet %}
   {{ parent() }}
-  {% if form.contact_type.vars.value == 'PERSON' %}
-    <link rel="stylesheet" type="text/css" href="{{ LIBRARY_URL }}/jquery/ui/latest/themes/smoothness/jquery-ui.min.css" />
-  {% endif %}
+  <link rel="stylesheet" type="text/css" href="{{ LIBRARY_URL }}/jquery/ui/latest/themes/smoothness/jquery-ui.min.css" />
   <link rel="stylesheet" type="text/css" href="{{ MANUFAKTUR_URL }}/Contact/Template/default/css/command.min.css" />
-{% endblock %}  
+{% endblock %}
+{% block jquery %}
+  {{ parent() }}
+  <script type="text/javascript" src="{{ MANUFAKTUR_URL }}/CKEditor/Source/ckeditor.js"></script>
+{% endblock jquery %}
+
 {% block content %}
   <!-- {{ _self.getTemplateName() }} -->
   {# need the parent to enable prompting messages #}
@@ -40,26 +43,32 @@
 {% endblock %}
 {% block footer_jquery %}
   {{ parent() }}
-  {% if form.contact_type.vars.value == 'PERSON' %}
-    <script type="text/javascript" src="{{ LIBRARY_URL }}/jquery/ui/latest/ui/minified/jquery-ui.min.js"></script>
-    <script type="text/javascript" src="{{ LIBRARY_URL }}/jquery/ui/latest/ui/minified/i18n/jquery-ui-i18n.min.js"></script>
-  {% endif %}
+  <script type="text/javascript" src="{{ LIBRARY_URL }}/jquery/ui/latest/ui/minified/jquery-ui.min.js"></script>
+  <script type="text/javascript" src="{{ LIBRARY_URL }}/jquery/ui/latest/ui/minified/i18n/jquery-ui-i18n.min.js"></script>
 {% endblock footer_jquery %}
 {% block footer %}
+  
+  {# the CKEditor need extra space - loop through the form and search for attr.type == 'html' #}
+  {% set iframe_add_height = 0 %}
+  {% for item in form %}
+    {% if item.vars.attr.type is defined and item.vars.attr.type == 'html' %}
+      {% set iframe_add_height = iframe_add_height + 150 %}
+    {% endif %}
+  {% endfor %}  
+  
   {{ parent() }}
+  
   <script type="text/javascript">
     if (typeof 'jQuery' !== 'undefined') {
       $(document).ready(function() {
-        {% if form.contact_type.vars.value == 'PERSON' %}
-          $.datepicker.setDefaults($.datepicker.regional['{{ app.translator.locale }}']);
-          $('#form_person_birthday').datepicker({ 
-            changeMonth: true,
-            changeYear: true,
-            minDate: '-100Y',
-            maxDate: -1,
-            yearRange: '{{ ('now'|date('Y'))-100 }}:{{ 'now'|date('Y') }}'
-          });        
-        {% endif %}
+        $.datepicker.setDefaults($.datepicker.regional['{{ app.translator.locale }}']);
+        $('.datepicker').datepicker({ 
+          changeMonth: true,
+          changeYear: true,
+          minDate: '-100Y',
+          maxDate: -1,
+          yearRange: '{{ ('now'|date('Y'))-100 }}:{{ 'now'|date('Y') }}'
+        });        
       });
     }
   </script>
