--- a/Template/default/command/register.contact.tags.twig
+++ b/Template/default/command/register.contact.tags.twig
@@ -17,7 +17,7 @@
 {% block content %}
   <!-- {{ _self.getTemplateName() }} -->
   
-  <h2>{{ 'Select category'|trans }}</h2>
+  <h2>{{ 'Select tags'|trans }}</h2>
   
   {# need the parent to enable prompting messages #}
   {{ parent() }}
@@ -26,12 +26,12 @@
     <div class="panel-body">
       {% if app.translator.locale == 'de' %}
         {# GERMAN #}
-        <p>Bitte wählen Sie die zutreffende Kategorie aus.</p>
-        <p>Über die Kategorie werden die Informationen festgelegt, die dem Kontakt zugeordnet werden.</p>
+        <p>Bitte wählen Sie die zutreffenden Markierungen (#tags) aus.</p>
+        <p>Die Markierungen ermöglichen eine einfache Klassifizierung und Suche.</p>
       {% else %}
         {# ENGLISH #}
-        <p>Please select the category, to which your contact will be assigned.</p>
-        <p>The category determine the information assigned to your contact record.</p>
+        <p>Please select the tags to assign to your contact.</p>
+        <p>The tags enable a simplified classification and search.</p>
       {% endif %}
     </div>
   </div>
@@ -39,13 +39,13 @@
   {# assign the bootstrap 3 theming for horizontal forms to the Symfony Form Factory output #}  
   {% form_theme form '@phpManufaktur/Contact/Template/default/command/form.fields.horizontal.twig' %}
 
-  <form action="{{ FRAMEWORK_URL ~ '/contact/register/category/check?pid=' ~ basic.pid }}" class="form-horizontal" method="post" role="form">
+  <form action="{{ FRAMEWORK_URL ~ '/contact/register/tags/check?pid=' ~ basic.pid }}" class="form-horizontal" method="post" role="form">
     {# loop through all form fields from the form.json #}
     {{ form_widget(form) }}     
 
     <div class="form-group">
       <div class="col-sm-9 col-sm-offset-3">
-        <button class="btn btn-default" type="submit">{{ 'Select category'|trans }}</button>
+        <button class="btn btn-default" type="submit">{{ 'Select tags'|trans }}</button>
       </div>
     </div>
   </form>    
