--- a/Template/default/command/form.fields.horizontal.twig
+++ b/Template/default/command/form.fields.horizontal.twig
@@ -27,8 +27,8 @@
 {% endblock %}
 
 {% block choice_row %}
-  {% if name == 'roles' %}
-    {% set translate = 0 %}
+  {% if name == 'tags' %}
+    {% set translate = 1 %}
     {% set columns = 2 %}
   {% endif %}
   <div class="form-group">
@@ -138,10 +138,10 @@
       {% set i = 1 %}
       {% for child in form %}
         {% if i == 1 %}<div class="row">{% endif %}
-        <div class="col-lg-{{ 12/columns }} col-md-{{ 12/columns }}">
+        <div class="col-lg-{{ 12/columns }} col-sm-{{ 12/columns }}">
           <div class="checkbox {{ class|default('') }}">
             <label>
-              {{ form_widget(child) }} {{ child.vars.value }}
+              {{ form_widget(child) }} {{ child.vars.value|humanize|trans }}
             </label>
           </div>
         </div>
@@ -158,7 +158,7 @@
       {% for child in form %}
         <div class="row">
           <div class="col-lg-12">
-            <div class="pull-left choice-radio">{{ form_widget(child) }}</div>
+            <div class="pull-left choice-radio">{{ form_widget(child) }}&nbsp;</div>
             <div>{{ child.vars.label|trans }}</div>
           </div>
         </div>
