--- a/Template/default/command/form.fields.horizontal.twig
+++ b/Template/default/command/form.fields.horizontal.twig
@@ -170,13 +170,13 @@
                
 {% block checkbox_widget %}
   {% spaceless %}
-    <input type="checkbox" {{ block('widget_attributes') }}{% if value is defined %} value="{{ value }}"{% endif %}{% if checked %} checked="checked"{% endif %} />
+    <input type="checkbox"{% if read_only %} disabled="disabled"{% endif %} {{ block('widget_attributes') }}{% if value is defined %} value="{{ value }}"{% endif %}{% if checked %} checked="checked"{% endif %} />
   {% endspaceless %}
 {% endblock checkbox_widget %}
     
 {% block radio_widget %}
   {% spaceless %}
-    <input type="radio" {{ block('widget_attributes') }}{% if value is defined %} value="{{ value }}"{% endif %}{% if checked %} checked="checked"{% endif %} />
+    <input type="radio"{% if read_only %} disabled="disabled"{% endif %} {{ block('widget_attributes') }}{% if value is defined %} value="{{ value }}"{% endif %}{% if checked %} checked="checked"{% endif %} />
   {% endspaceless %}
 {% endblock radio_widget %}
     
