--- a/Template/default/command/form.fields.horizontal.twig
+++ b/Template/default/command/form.fields.horizontal.twig
@@ -100,7 +100,7 @@
 {% block choice_widget_collapsed %}
   {% spaceless %}  
   <select class="form-control" {{ block('widget_attributes') }}{% if multiple %} multiple="multiple"{% endif %}>
-      {% if empty_value is not none %}
+      {% if empty_value is not none and not read_only %}
           <option value=""{% if required and value is empty %} selected="selected"{% endif %}>{{ empty_value|trans({}, translation_domain) }}</option>
       {% endif %}
       {% if preferred_choices|length > 0 %}
@@ -126,7 +126,7 @@
                 {{ block('choice_widget_options') }}
             </optgroup>
         {% else %}
-            <option value="{{ choice.value }}"{% if choice is selectedchoice(value) %} selected="selected"{% endif %}>{% if translate == 1 %}{{ choice.label|trans({}, translation_domain) }}{% else %}{{ choice.label }}{% endif %}</option>
+            <option {% if read_only and choice is not selectedchoice(value) %}disabled="disabled" {% endif %}value="{{ choice.value }}"{% if choice is selectedchoice(value) %} selected="selected"{% endif %}>{% if translate == 1 %}{{ choice.label|trans({}, translation_domain) }}{% else %}{{ choice.label }}{% endif %}</option>
         {% endif %}
     {% endfor %}
 {% endspaceless %}
