--- a/Template/default/admin/import/start.keepintouch.twig
+++ b/Template/default/admin/import/start.keepintouch.twig
@@ -6,7 +6,14 @@
   @copyright 2013 Ralf Hertsch <ralf.hertsch@phpmanufaktur.de>
   @license MIT License (MIT) http://www.opensource.org/licenses/MIT
 #}
-{% extends getTemplateFile('@phpManufaktur/Basic/Template', 'framework/body.twig') %}
+{% if usage == 'framework' %}
+  {% set template_namespace = '@phpManufaktur/Basic/Template' %}
+  {% set template_file = 'framework/body.twig' %}  
+{% else %}
+  {% set template_namespace = '@phpManufaktur/Contact/Template' %}
+  {% set template_file = 'admin/body.twig' %}
+{% endif %}
+{% extends getTemplateFile(template_namespace, template_file) %}
 {% block stylesheet %}
   {{ parent() }}
   <link rel="stylesheet" type="text/css" href="{{ MANUFAKTUR_URL }}/Contact/Template/default/css/admin.min.css" media="screen, projection" />
