--- a/Template/default/admin/export/start.export.twig
+++ b/Template/default/admin/export/start.export.twig
@@ -28,33 +28,19 @@
 {% block content %}
   <!-- {{ _self.getTemplateName() }} -->  
   <div class="container{% if usage != 'framework'%}-fluid{% endif %}">
-    <h1>{{ 'Import contact records'|trans }}</h1>
+    <h1>{{ 'Export contact records'|trans }}</h1>
 
     {{ alert }}
-
-    <div class="panel panel-default">
-      <div class="panel-body">
-        {% if app.translator.locale == 'de' %}
-          {# GERMAN #}
-          <p>Sie können Kontaktdaten aus verschiedenen Datei Formaten oder aus einer KeepInTouch Installation in kitFramework Contact übernehmen.</p>
-          <p>Bitte wählen Sie den gewünschten Import aus.</p>
-        {% else %}
-          {# ENGLISH #}
-          <p>You can import contact records from different file formats or from an existing KeepInTouch installation into kitFramework Contact.</p>
-          <p>Please select the import you want to perform.</p>
-        {% endif %}
-      </div>
-    </div>
 
     {# assign the bootstrap 3 theming for horizontal forms to the Symfony Form Factory output #}  
     {% form_theme form '@phpManufaktur/Contact/Template/default/command/form.fields.horizontal.twig' %}
 
-    <form action="{{ FRAMEWORK_URL ~ '/admin/contact/import/select' }}" class="form-horizontal" method="post" role="form">
+    <form action="{{ FRAMEWORK_URL ~ '/admin/contact/export/execute' }}" class="form-horizontal" method="post" role="form">
       {{ form_widget(form) }}     
 
       <div class="form-group">
         <div class="col-sm-9 col-sm-offset-3">
-          <button class="btn btn-default" type="submit">{{ 'Start import'|trans }}</button>
+          <button class="btn btn-default" type="submit">{{ 'Start export'|trans }}</button>
         </div>
       </div>
     </form> 
