--- a/Template/default/command/search.contact.twig
+++ b/Template/default/command/search.contact.twig
@@ -26,8 +26,18 @@
   
   <form action="{{ FRAMEWORK_URL ~ '/contact/search?pid=' ~ basic.pid }}" class="form-inline" method="post" role="form">
     <div class="row">
+    {% if use_categories and categories|length == 0 %}
+      <div class="col-xs-3">
+        <select name="category" class="form-control">
+          <option value="-1">{{ '- no category -'|trans }}</option>
+          {% for value, text in category_select %}
+            <option value="{{ value }}">{{ text|humanize|trans }}</option>
+          {% endfor %}  
+        </select>
+      </div>
+    {% endif %}
     {% if use_tags and tags|length == 0 %}
-      <div class="col-xs-4">
+      <div class="col-xs-3">
         <select name="tag" class="form-control">
           <option value="-1">{{ '- no tags -'|trans }}</option>
           {% for value, text in tag_select %}
@@ -35,7 +45,11 @@
           {% endfor %}  
         </select>
       </div>
-      <div class="col-xs-8">
+    {% endif %}    
+    {% if (use_categories and categories|length == 0) and (use_tags and tags|length == 0) %} 
+      <div class="col-xs-6">    
+    {% elseif (use_categories and categories|length == 0) or (use_tags and tags|length == 0) %}
+      <div class="col-xs-9">
     {% else %}
       <div class="col-xs-12">
     {% endif %}
