--- a/Template/default/admin/edit.contact.twig
+++ b/Template/default/admin/edit.contact.twig
@@ -17,6 +17,7 @@
 {% extends getTemplateFile(template_namespace, template_file) %}
 {% block stylesheet %}
   {{ parent() }}
+  <link rel="stylesheet" type="text/css" href="{{ MANUFAKTUR_URL ~ '/Contact/Template/default/css/form.horizontal.min.css' }}" media="screen, projection" />
   {% if form.contact_type.vars.value == 'PERSON' %}
     <link rel="stylesheet" type="text/css" href="{{ LIBRARY_URL }}/jquery/ui/latest/themes/smoothness/jquery-ui.min.css" media="screen, projection" />
   {% endif %}
@@ -34,7 +35,7 @@
     
     {% include '@phpManufaktur/Contact/Template/default/admin/toolbar.twig' with {toolbar: extra.toolbar} %}
     
-    <div class="height-15"></div>
+    <h2>{{ 'Edit contact'|trans }}</h2>
     
     {% include '@phpManufaktur/Contact/Template/default/pattern/admin/simple/edit.contact.twig' %}
 
