--- a/Template/default/command/edit.contact.twig
+++ b/Template/default/command/edit.contact.twig
@@ -13,6 +13,7 @@
 {% block stylesheet %}
   {{ parent() }}
   <link rel="stylesheet" type="text/css" href="{{ LIBRARY_URL }}/jquery/ui/latest/themes/smoothness/jquery-ui.min.css" />
+  <link rel="stylesheet" type="text/css" href="{{ MANUFAKTUR_URL ~ '/Contact/Template/default/css/form.horizontal.min.css' }}" />
   <link rel="stylesheet" type="text/css" href="{{ MANUFAKTUR_URL }}/Contact/Template/default/css/command.min.css" />
 {% endblock %}
 {% block jquery %}
@@ -31,7 +32,7 @@
   {{ basic.alert }}
   
   {# assign the bootstrap 3 theming for horizontal forms to the Symfony Form Factory output #}  
-  {% form_theme form '@phpManufaktur/Contact/Template/default/command/form.fields.horizontal.twig' %}
+  {% form_theme form '@phpManufaktur/Contact/Template/default/pattern/form.fields.horizontal.twig' %}
 
   <form action="{{ FRAMEWORK_URL ~ '/contact/owner/edit/check?pid=' ~ basic.pid }}" class="form-horizontal" method="post" role="form">
     {# loop through all form fields from the form.json #}
