--- a/Template/default/command/register.contact.data.twig
+++ b/Template/default/command/register.contact.data.twig
@@ -14,6 +14,7 @@
   {{ parent() }}
   <link rel="stylesheet" type="text/css" href="{{ LIBRARY_URL }}/jquery/ui/latest/themes/smoothness/jquery-ui.min.css" />
   <link rel="stylesheet" type="text/css" href="{{ MANUFAKTUR_URL }}/Contact/Template/default/css/command.min.css" />
+  <link rel="stylesheet" type="text/css" href="{{ MANUFAKTUR_URL }}/Contact/Template/default/css/form.horizontal.min.css" />
 {% endblock %}
 {% block jquery %}
   {{ parent() }}
@@ -28,7 +29,7 @@
   {{ parent() }}
   
   {# assign the bootstrap 3 theming for horizontal forms to the Symfony Form Factory output #}  
-  {% form_theme form '@phpManufaktur/Contact/Template/default/command/form.fields.horizontal.twig' %}
+  {% form_theme form '@phpManufaktur/Contact/Template/default/pattern/form.fields.horizontal.twig' %}
 
   <form action="{{ FRAMEWORK_URL ~ '/contact/register/contact/check?pid=' ~ basic.pid }}" class="form-horizontal" method="post" role="form">
     {# loop through all form fields from the form.json #}
