--- a/Template/default/command/register.contact.type.twig
+++ b/Template/default/command/register.contact.type.twig
@@ -12,6 +12,7 @@
 {% block description %}{{ 'Register a public contact record'|trans }}{% endblock %}
 {% block stylesheet %}
   {{ parent() }}
+  <link rel="stylesheet" type="text/css" href="{{ MANUFAKTUR_URL ~ '/Contact/Template/default/css/form.horizontal.min.css' }}" />
   <link rel="stylesheet" type="text/css" href="{{ MANUFAKTUR_URL }}/Contact/Template/default/css/command.min.css" />
 {% endblock %}  
 {% block content %}
@@ -38,7 +39,7 @@
   </div>
   
   {# assign the bootstrap 3 theming for horizontal forms to the Symfony Form Factory output #}  
-  {% form_theme form '@phpManufaktur/Contact/Template/default/command/form.fields.horizontal.twig' %}
+  {% form_theme form '@phpManufaktur/Contact/Template/default/pattern/form.fields.horizontal.twig' %}
 
   <form action="{{ FRAMEWORK_URL ~ '/contact/register?pid=' ~ basic.pid }}" class="form-horizontal" method="post" role="form">
     {# loop through all form fields from the form.json #}
