--- a/Template/default/admin/import/execute.keepintouch.twig
+++ b/Template/default/admin/import/execute.keepintouch.twig
@@ -16,7 +16,7 @@
 {% extends getTemplateFile(template_namespace, template_file) %}
 {% block stylesheet %}
   {{ parent() }}
-  <link rel="stylesheet" type="text/css" href="{{ MANUFAKTUR_URL ~ '/Contact/Template/default/css/admin.min.css' }}" media="screen, projection" />
+  <link rel="stylesheet" type="text/css" href="{{ MANUFAKTUR_URL ~ '/Contact/Template/default/css/admin.min.css' }}" />
 {% endblock %}
 
 {% block content %}
