--- a/Template/default/form/sample_customize/form.twig
+++ b/Template/default/form/sample_customize/form.twig
@@ -15,10 +15,10 @@
   {{ parent() }}
   {% if fileExists(MANUFAKTUR_PATH ~ '/Contact/Template/' ~ FRAMEWORK_TEMPLATES.0 ~ '/css/form.horizontal.min.css') %}
     {# load the CSS for this template from the PRIMARY template defined in framework.json #}
-    <link rel="stylesheet" type="text/css" href="{{ MANUFAKTUR_URL ~ '/Contact/Template/' ~ FRAMEWORK_TEMPLATES.0 ~ '/css/form.horizontal.min.css' }}" media="screen, projection" />
+    <link rel="stylesheet" type="text/css" href="{{ MANUFAKTUR_URL ~ '/Contact/Template/' ~ FRAMEWORK_TEMPLATES.0 ~ '/css/form.horizontal.min.css' }}" />
   {% else %}
     {# ... otherwise load the CSS from the /default directory for this template #}
-    <link rel="stylesheet" type="text/css" href="{{ MANUFAKTUR_URL ~ '/Contact/Template/default/css/form.horizontal.min.css' }}" media="screen, projection" />
+    <link rel="stylesheet" type="text/css" href="{{ MANUFAKTUR_URL ~ '/Contact/Template/default/css/form.horizontal.min.css' }}" />
   {% endif %}
 {% endblock %}
   
