--- a/Template/default/pattern/admin/simple/edit.category.twig
+++ b/Template/default/pattern/admin/simple/edit.category.twig
@@ -9,108 +9,54 @@
 
 {{ alert }}
 
-<form action="{{ FRAMEWORK_URL ~ route.action }}" method="post" {{ form_enctype(form) }} role="form">
-  
-  {{ form_errors(form) }}
-  {{ form_row(form._token) }}
-  {{ form_row(form.category_type_id) }}
-
-  <div class="row">
-    <div class="col-lg-3 col-md-3 col-sm-4">
-      <label>{{ 'category_type_id'|trans }}</label>
-    </div>
-    <div class="col-lg-6 col-md-6 col-sm-8">
+<div class="panel panel-default">
+  <div class="panel-body">
+    {% if app.translator.locale == 'de' %}
+      {# GERMAN #}
+      <p>Der <strong>Bezeichner</strong> für die Kategorie wird immer in Großbuchstaben umgewandelt, Leerzeichen werden durch einen Unterstrich ersetzt, Sonderzeichen wie ä, ö, ü oder ß sind im Bezeichner nicht gestattet.</p>
+      <p>In der Voreinstellung werden die <strong>Bezeichner</strong> in allen Dialogen so angezeigt, daß der erste Buchstabe in Großschreibung und alle folgenden Zeichen in Kleinschreibung dargestellt und Unterstriche durch Leerzeichen ersetzt werden.</p>
+      <p>Sie können die <strong>Bezeichner</strong> in jede beliebige Sprache übersetzen, die Sie in Ihrem CMS nutzen. Fügen Sie den <strong>Bezeichner</strong> einfach einer benutzerdefinierten Sprachdatei im Verzeichnis <em>/kit2/extension/phpmanufaktur/phpManufaktur/Contact/Data/Locale/Custom</em> hinzu. Die <em>README.md</em> im gleichen Verzeichnis erklärt Ihnen, wie Sie benutzerdefinierte Sprachdateien anlegen und verwenden.</p>
       {% if form.category_type_id.vars.value > 0 %}
-        {{ '%03d'|format(form.category_type_id.vars.value) }}
-      {% else %}
-        {{ '- new category -'|trans }}
+        <p>In der aktuellen Sprache {{ app.translator.locale|upper }} wird der <strong>Bezeichner</strong> von <strong>{{ form.vars.value.category_type_name|replace({'_':' '})|capitalize }}</strong> in <strong>{{ form.vars.value.category_type_name|replace({'_':' '})|capitalize|trans }}</strong> übersetzt und angezeigt.</p>
       {% endif %}
-    </div>
+    {% else %}
+      {# ENGLISH #}
+      <p>The <strong>name</strong> of the category will be always transformed to uppercase and spaces will be replaced by underscores, special chars are not allowed.</p>
+      <p>By default the <strong>name</strong> will be shown in all dialogs with the first character in uppercase, all following characters in lowercase and underscores replaced with a space.</p>
+      <p>You can <em>translate</em> the <strong>name</strong> to any language you are using within your CMS. Just add the <strong>name</strong> to a custom language file in the directory <em>/kit2/extension/phpmanufaktur/phpManufaktur/Contact/Data/Locale/Custom</em>, the <em>README.md</em> in this directory will explain you how to create and use custom language files.</p>
+      {% if form.category_type_id.vars.value > 0 %}
+        <p>At the current language {{ app.translator.locale|upper }} the <strong>name</strong> will be translated from <strong>{{ form.vars.value.category_type_name|replace({'_':' '})|capitalize }}</strong> to <strong>{{ form.vars.value.category_type_name|replace({'_':' '})|capitalize|trans }}</strong>.</p>
+      {% endif %}  
+    {% endif %}
   </div>
+</div>
 
-  <div class="row">
-    <div class="col-lg-3 col-md-3 col-sm-4">{{ form_label(form.category_type_name) }}</div>
-    <div class="col-lg-6 col-md-6 col-sm-8">{{ form_widget(form.category_type_name, {'attr':{'class':'form-control input-sm'}}) }}</div>
-  </div>
+{% form_theme form '@phpManufaktur/Contact/Template/default/pattern/form.fields.horizontal.twig' %}
 
-  {% if form.vars.value.category_type_id > 0 %}
-    <div class="row">
-      <div class="col-lg-3 col-md-3 col-sm-4"><label>{{ 'Category name (translated)'|trans }}</label></div>
-      <div class="col-lg-6 col-md-6 col-sm-8">{{ form.vars.value.category_type_name|capitalize }} &rArr; {{ form.vars.value.category_type_name|capitalize|trans }}</div>
-    </div>
-  {% endif %}
+<form action="{{ FRAMEWORK_URL ~ route.action }}" class="form-horizontal" method="post" role="form">
+  <fieldset>
+    <legend>{{ 'Category definition'|trans }}</legend>
+    {% set definition_fields = ['category_type_id','category_type_name','category_type_access','category_type_target_url','category_type_description','delete'] %}
+    {% for child in form.children %}
+      {% if child.vars.name in definition_fields %}
+        {{ form_row(child) }}
+      {% endif %}
+    {% endfor %}
+  </fieldset>
   
-  <div class="row">
-    <div class="col-lg-3 col-md-3 col-sm-4">{{ form_label(form.category_type_access) }}</div>
-    <div class="col-lg-6 col-md-6 col-sm-8">{{ form_widget(form.category_type_access, {'attr':{'class':'form-control input-sm'}}) }}</div>
-  </div>
-
-  <div class="row">
-    <div class="col-lg-3 col-md-3 col-sm-4">{{ form_label(form.category_type_target_url) }}</div>
-    <div class="col-lg-6 col-md-6 col-sm-8">{{ form_widget(form.category_type_target_url, {'attr':{'class':'form-control input-sm'}}) }}</div>
-  </div>
-
-  <div class="row">
-    <div class="col-lg-3 col-md-3 col-sm-4">{{ form_label(form.category_type_description) }}</div>
-    <div class="col-lg-6 col-md-6 col-sm-8">{{ form_widget(form.category_type_description, {'attr':{'class':'form-control input-sm'}}) }}</div>
-  </div>
-
-  {% if form.category_type_id.vars.value > 0 %}
-    <div class="row">
-      <div class="col-lg-3 col-md-3 col-sm-4"><label>{{ 'Category description (translated)'|trans }}</label></div>
-      <div class="col-lg-6 col-md-6 col-sm-8">{{ form.category_type_description.vars.value|trans }}</div>
-    </div>
-  {% endif %}
-
-  {{ form_row(form.category_extra_fields) }}
-  <div class="height-5"></div>
-  <div class="row">
-    <div class="col-lg-3 col-md-3 col-sm-4"><label>{{ 'Extra fields'|trans }}</label></div>
-    <div class="col-lg-6 col-md-6 col-sm-8">
-      {% if form.category_extra_fields.vars.value|length > 0 %}
-        {% set extras = form.category_extra_fields.vars.value|split(',') %}
-        {% for extra in extras %}
-          <div class="row">
-            <div class="col-lg-4 col-md-4 col-sm-4">{{ form_label(attribute(form, 'extra_field_' ~ extra)) }}</div>
-            <div class="col-lg-8 col-md-8 col-sm-8">{{ form_widget(attribute(form, 'extra_field_' ~ extra), {'attr':{'class':'form-control input-sm'}}) }}</div>
-          </div>
-        {% endfor %}
-      {% else %}
-        - {{ 'no extra field assigned'|trans }} -
+  <fieldset>
+    <legend>{{ 'Extra fields'|trans }}</legend>
+    {% for child in form.children %}
+      {% if child.vars.name not in definition_fields %}
+        {{ form_row(child) }}
       {% endif %}
-    </div>
-  </div>  
-  <div class="height-5"></div> 
+    {% endfor %}
+  </fieldset>
+  {#{ form_widget(form) }#}     
 
-  <div class="row">
-    <div class="col-lg-3 col-md-3 col-sm-4">{{ form_label(form.add_extra_field) }}</div>
-    <div class="col-lg-5 col-md-5 col-sm-6">
-      {{ form_widget(form.add_extra_field, {'attr':{'class':'form-control input-sm'}}) }}
-    </div>
-    <div class="col-lg-1 col-md-1 col-sm-2">
-      <a class="btn btn-default input-sm" href="{{ FRAMEWORK_URL ~ route.extra }}" role="button" title="{{ 'Edit extra fields'|trans }}"><i class="fa fa-pencil-square-o"></i></a>
-    </div>
-  </div>  
-
-  <div class="height-15"></div>
-  {% if form.category_type_id.vars.value > 0 %}
-    <div class="row">
-      <div class="col-lg-3 col-md-3 col-sm-4"><label>&nbsp;</label></div>
-      <div class="col-lg-6 col-md-6 col-sm-8">
-        <input type="checkbox" name="delete" value="1" />&nbsp;{{ 'delete the category <b>%category_type_name%</b>'|trans({'%category_type_name%':form.category_type_name.vars.value}) }}
-      </div>
-    </div>
-  {% endif %}
-
-  {{ form_rest(form) }}
-
-  <div class="height-15"></div>
-  <div class="row">
-    <div class="col-lg-3 col-md-3 col-sm-4"<label for="submit">&nbsp;</label></div>
-    <div class="col-lg-6 col-md-6 col-sm-8">
-      <button class="btn btn-default" type="submit">{{ 'Submit'|trans }}</button>&nbsp;
-      <a class="btn btn-default" href="{{ FRAMEWORK_URL ~ route.list }}" role="button">{{ 'Cancel'|trans }}</a>
+  <div class="form-group">
+    <div class="col-sm-9 col-sm-offset-3">
+      <button class="btn btn-default" type="submit">{{ 'Submit'|trans }}</button>
     </div>
   </div>
-
-</form>
+</form>    
