--- a/Template/default/pattern/admin/simple/edit.extra.twig
+++ b/Template/default/pattern/admin/simple/edit.extra.twig
@@ -35,8 +35,11 @@
 
 <form action="{{ FRAMEWORK_URL ~ route.action }}" class="form-horizontal" method="post" role="form">
   
-  {{ form_widget(form) }}     
-
+  <fieldset>
+    <legend>{{ 'Extra field definition'|trans }}</legend>
+    {{ form_widget(form) }}     
+  </fieldset>
+  
   <div class="form-group">
     <div class="col-sm-9 col-sm-offset-3">
       <button class="btn btn-default" type="submit">{{ 'Submit'|trans }}</button>
