--- a/Template/default/pattern/admin/simple/edit.title.twig
+++ b/Template/default/pattern/admin/simple/edit.title.twig
@@ -9,90 +9,40 @@
 
 {{ alert }}
 
-<form action="{{ FRAMEWORK_URL ~ route.action }}" method="post" {{ form_enctype(form) }} role="form">
-  {{ form_errors(form) }}
-  {{ form_row(form._token) }}
-  {{ form_row(form.title_id) }}
-  
-  <div class="row">
-    <div class="col-lg-3 col-md-3 col-sm-4">
-      <label>{{ 'ID'|trans }}</label>
-    </div>
-    <div class="col-lg-6 col-md-6 col-sm-8">
+<div class="panel panel-default">
+  <div class="panel-body">
+    {% if app.translator.locale == 'de' %}
+      {# GERMAN #}
+      <p>Der <strong>Bezeichner</strong> für den Titel wird immer in Großbuchstaben umgewandelt, Leerzeichen werden durch einen Unterstrich ersetzt, Sonderzeichen wie ä, ö, ü oder ß sind im Bezeichner nicht gestattet.</p>
+      <p>In der Voreinstellung werden die <strong>Kurzbezeichnungen</strong> und die <strong>Langbezeichnungen</strong> in allen Dialogen exakt so angezeigt, wie sie hier eingegeben wurden.</p>
+      <p>Sie können die <strong>Kurzbezeichnungen</strong> und die <strong>Langbezeichnungen</strong> in jede beliebige Sprache übersetzen, die Sie in Ihrem CMS nutzen. Fügen Sie den <strong>Kurzbezeichner</strong> bzw. <strong>Langebzeichner</strong> einfach einer benutzerdefinierten Sprachdatei im Verzeichnis <em>/kit2/extension/phpmanufaktur/phpManufaktur/Contact/Data/Locale/Custom</em> hinzu. Die <em>README.md</em> im gleichen Verzeichnis erklärt Ihnen, wie Sie benutzerdefinierte Sprachdateien anlegen und verwenden.</p>
       {% if form.title_id.vars.value > 0 %}
-        {{ '%03d'|format(form.title_id.vars.value) }}
-      {% else %}
-        {{ '- new title -'|trans }}
+        <p>In der aktuellen Sprache {{ app.translator.locale|upper }} wird die <strong>Kurzbezeichnung</strong> von <strong>{{ form.title_short.vars.value }}</strong> in <strong>{{ form.title_short.vars.value|trans }}</strong> und die <strong>Langbezeichnung</strong> von <strong>{{ form.title_long.vars.value }}</strong> in <strong>{{ form.title_long.vars.value|trans }}</strong> übersetzt und angezeigt.</p>
       {% endif %}
-    </div>
+    {% else %}
+      {# ENGLISH #}
+      <p>The <strong>name</strong> of the title will be always transformed to uppercase and spaces will be replaced by underscores, special chars are not allowed.</p>
+      <p>By default the <strong>short name</strong> and the <strong>long name</strong> will be shown exact as they are typed in this dialog.</p>
+      <p>You can <em>translate</em> the <strong>name</strong> to any language you are using within your CMS. Just add the <strong>short name</strong> and the <strong>long name</strong> to a custom language file in the directory <em>/kit2/extension/phpmanufaktur/phpManufaktur/Contact/Data/Locale/Custom</em>, the <em>README.md</em> in this directory will explain you how to create and use custom language files.</p>
+      {% if form.title_id.vars.value > 0 %}
+        <p>At the current language {{ app.translator.locale|upper }} the <strong>short name</strong> will be translated from <strong>{{ form.title_short.vars.value }}</strong> to <strong>{{ form.title_short.vars.value|trans }}</strong> and the <strong>long name</strong> from <strong>{{ form.title_long.vars.value }}</strong> to <strong>{{ form.title_long.vars.value|trans }}</strong>.</p>
+      {% endif %}  
+    {% endif %}
   </div>
-  
-  <div class="row">
-    <div class="col-lg-3 col-md-3 col-sm-4">
-      {{ form_label(form.title_identifier) }}
-    </div>
-    <div class="col-lg-6 col-md-6 col-sm-8">
-      {{ form_widget(form.title_identifier, {'attr':{'class':'form-control input-sm'}}) }}
-    </div>
-  </div>
-  <div class="row">
-    <div class="col-lg-3 col-md-3 col-sm-4">
-      {{ form_label(form.title_short) }}
-    </div>
-    <div class="col-lg-6 col-md-6 col-sm-8">
-      {{ form_widget(form.title_short, {'attr':{'class':'form-control input-sm'}}) }}
-    </div>
-  </div>
-  
-  {% if form.vars.value.title_id > 0 %}  
-    <div class="row">
-      <div class="col-lg-3 col-md-3 col-sm-4">
-        <label>{{ 'Short name (translated)'|trans }}</label>
-      </div>
-      <div class="col-lg-6 col-md-6 col-sm-8">
-        {{ form.vars.value.title_short }} &rArr; {{ form.vars.value.title_short|trans }}
-      </div>
-    </div>
-  {% endif %}
+</div>
 
-  <div class="row">
-    <div class="col-lg-3 col-md-3 col-sm-4">
-      {{ form_label(form.title_long) }}
-    </div>
-    <div class="col-lg-6 col-md-6 col-sm-8">
-      {{ form_widget(form.title_long, {'attr':{'class':'form-control input-sm'}}) }}
-    </div>
-  </div>
-  {% if form.vars.value.title_id > 0 %}
-    <div class="row">
-      <div class="col-lg-3 col-md-3 col-sm-4">
-        <label>{{ 'Long name (translated)'|trans }}</label>
-      </div>
-      <div class="col-lg-6 col-md-6 col-sm-8">
-        {{ form.vars.value.title_long }} &rArr; {{ form.vars.value.title_long|trans }}
-      </div>
-    </div>
-  {% endif %}  
+{% form_theme form '@phpManufaktur/Contact/Template/default/pattern/form.fields.horizontal.twig' %}
 
-  {% if form.vars.value.title_id > 0 %}
-    <div class="row">
-      <div class="col-lg-3 col-md-3 col-sm-4">
-        <label>&nbsp;</label>
-      </div>
-      <div class="col-lg-6 col-md-6 col-sm-8">
-        <input type="checkbox" name="delete" value="1" />&nbsp;{{ 'delete the title <b>%title_identifier%</b>'|trans({'%title_identifier%':form.vars.value.title_identifier}) }}
-      </div>
-    </div>
-  {% endif %}
+<form action="{{ FRAMEWORK_URL ~ route.action }}" class="form-horizontal" method="post" role="form">
   
-  {#{ form_rest(form) }#}
-
-  <div class="height-15"></div>
-  <div class="row">
-    <div class="col-lg-3 col-md-3 col-sm-4"<label for="submit">&nbsp;</label></div>
-    <div class="col-lg-6 col-md-6 col-sm-8">
-      <button class="btn btn-default" type="submit">{{ 'Submit'|trans }}</button>&nbsp;
-      <a class="btn btn-default" href="{{ FRAMEWORK_URL ~ route.list }}" role="button">{{ 'Cancel'|trans }}</a>
+  <fieldset>
+    <legend>{{ 'Title definition'|trans }}</legend>
+    {{ form_widget(form) }}     
+  </fieldset>
+  
+  <div class="form-group">
+    <div class="col-sm-9 col-sm-offset-3">
+      <button class="btn btn-default" type="submit">{{ 'Submit'|trans }}</button>
     </div>
   </div>
-</form>
+</form>    
