--- a/Template/default/pattern/admin/simple/list.title.twig
+++ b/Template/default/pattern/admin/simple/list.title.twig
@@ -7,6 +7,8 @@
   @license MIT License (MIT) http://www.opensource.org/licenses/MIT
 #}
 
+{{ alert }}
+
 <div class="table-responsive">
   <table class="table table-striped table-condensed table-hover">
     <thead>
