--- a/Template/default/pattern/form.fields.horizontal.twig
+++ b/Template/default/pattern/form.fields.horizontal.twig
@@ -48,7 +48,7 @@
 {% block checkbox_row %}
   <div class="form-group">
     <div class="col-sm-9 col-sm-offset-3">
-      {{ block('checkbox_widget') }}&nbsp;&nbsp;{% if label is empty %}{{ name|humanize }}{% else %}{{ label|trans }}{% endif %}{% if required %}<span class="required">*</span>{% endif %}
+      {{ block('checkbox_widget') }}&nbsp;&nbsp;{% if label is empty %}{{ name|humanize|trans }}{% else %}{{ label|trans }}{% endif %}{% if required %}<span class="required">*</span>{% endif %}
     </div>
   </div>
 {% endblock %}
