--- a/Template/default/command/list.contact.twig
+++ b/Template/default/command/list.contact.twig
@@ -83,7 +83,7 @@
         theme : "bootstrap",
         widthFixed: true,
         headerTemplate : '{content} {icon}', 
-        widgets : [ "uitheme", "zebra" ],  // add "filter" for additional filter row
+        widgets : [ "uitheme", "zebra" ],  // add "filter" for an additional filter row
         widgetOptions : {
           zebra : ["even", "odd"],
           filter_reset : ".reset"
