localization is just in progress ...

--- a/Template/default/pattern/admin/simple/list.contact.twig
+++ b/Template/default/pattern/admin/simple/list.contact.twig
@@ -68,7 +68,7 @@
                 {% elseif 'active desc' in head_class %}
                   <i class="fa fa-sort-alpha-desc"></i>&nbsp;
                 {% endif %}
-                <a href="{{ FRAMEWORK_URL ~ route.pagination|replace({'{page}':current_page, '{order}':head, '{direction}':head_order}) }}" title="{% if head_order == 'asc' %}{{ 'Click to sort column ascending'|trans }}{% else %}{{ 'Click to sort column descending'|trans }}{% endif %}">{{ head|trans }}</a>
+                <a href="{{ FRAMEWORK_URL ~ route.pagination|replace({'{page}':current_page, '{order}':head, '{direction}':head_order}) }}" title="{% if head_order == 'asc' %}{{ 'Click to sort column ascending'|trans }}{% else %}{{ 'Click to sort column descending'|trans }}{% endif %}">{{ head|humanize|trans }}</a>
               </th>  
             {% endif %}
           {% endfor %}
@@ -88,7 +88,7 @@
                     {% endif %}
                   </td>
                 {% elseif column == 'contact_type' %}
-                  <td class="{{ column }}">{{ value|trans }}</td>
+                  <td class="{{ column }}">{{ value|humanize|trans }}</td>
                 {% elseif column == 'communication_email' %}
                   <td class="{{ column }}"><a href="mailto:{{ value }}">{{ value }}</a></td>
                 {% else %}
